fix: scrollbar gutter

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,4 +22,5 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-gutter: stable;
 }
